--- a/supervised+learning.ipynb
+++ b/supervised+learning.ipynb
@@ -4,8 +4,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "scikit-learn User Guide\n",
+    "** scikit-learn User Guide**\n",
+    "\n",
     "http://scikit-learn.org/stable/user_guide.html\n",
+    "\n",
     "http://scikit-learn.org/stable/modules/classes.html"
    ]
   },
@@ -20,19 +22,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Supervised learning by iris data. This data sets consists of 3 different types of irises' (Setosa, Versicolour, and Virginica) petal and sepal length, stored in a 150x4 numpy.ndarray. The rows being the samples and the columns being: Sepal Length, Sepal Width, Petal Length and Petal Width."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**Iris Data\n",
-    "Sepal length| Sepal width| Petal length| Petal width|    Species\n",
-    "        5.1\t     3.5\t   1.4\t          0.2\t          setosa\n",
-    "        4.9\t     3.0\t   1.4 \t          0.2     \t      setosa\n",
-    "        4.7\t     3.2\t   1.3            0.2     \t      setosa\n",
-    "        4.6\t     3.1\t   1.5\t          0.2 \t          setosa"
+    "In this session, we will go through an example of supervised learning using the Iris data set. This data sets consists of 3 different types of irises' (Setosa, Versicolour, and Virginica) petal and sepal length, stored in a 150x4 `numpy.ndarray`. \n",
+    "\n",
+    "The columns of the array represents the petal and sepal's attributes: Sepal Length, Sepal Width, Petal Length and Petal Width. \n",
+    "\n",
+    "The rows of the array represents the observations for each attribute. "
    ]
   },
   {
@@ -73,7 +67,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
@@ -90,22 +83,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "dict_keys(['data', 'target', 'target_names', 'DESCR', 'feature_names'])"
-      ]
-     },
-     "execution_count": 111,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "iris.keys()"
    ]
@@ -113,9 +95,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "iris.target_names   #access iris data like an Object"
@@ -125,20 +105,17 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
    "source": [
-    "iris.DESCR"
+    "print(iris.DESCR)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "iris['target'] # another way to access iris data like a dictionary"
@@ -147,9 +124,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "iris['data']"
@@ -158,9 +133,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "iris.data.shape"
@@ -169,9 +142,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "type(iris.data)"
@@ -183,7 +154,7 @@
     "collapsed": true
    },
    "source": [
-    "**Exploratory data analysis"
+    "**Exploratory data analysis**"
    ]
   },
   {
@@ -219,9 +190,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "print(iris.feature_names)"
@@ -230,9 +199,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "print(df.head())"
@@ -244,7 +211,7 @@
     "collapsed": true
    },
    "source": [
-    "Visual exploratory data analysis"
+    "**Visual exploratory data analysis**"
    ]
   },
   {
@@ -255,15 +222,13 @@
    },
    "outputs": [],
    "source": [
-    "_fig = pd.plotting.scatter_matrix(df,c=y,figsize = [8,8],s=150,marker='D')"
+    "_fig = pd.tools.plotting.scatter_matrix(df,c=y,figsize = [8,8],s=150,marker='D')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "plt.show()"
@@ -273,8 +238,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "k-NN classification\n",
-    "============================"
+    "## k-NN (k-nearest neighbors) Classification"
    ]
   },
   {
@@ -291,9 +255,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Create a k-NN classifier with 6 neighbors\n",
@@ -301,18 +263,13 @@
     "\n",
     "# Fit the classifier to the data\n",
     "#the features and targets are numpy arrays\n",
-    "knn.fit(iris['data'], iris['target']) \n",
-    "KNeighborsClassifier(algorithm='auto', leaf_size=30,metric='minkowski',\n",
-    "                     metric_params=None, n_jobs=1,n_neighbors=6, p=2,weights='uniform')\n",
-    "                    "
+    "knn.fit(iris['data'], iris['target']) "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "iris['data'].shape"
@@ -321,9 +278,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "iris['target'].shape"
@@ -341,9 +296,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "prediction = knn.predict(X_new) #X_new is not defined"
@@ -355,7 +308,8 @@
     "collapsed": true
    },
    "source": [
-    "**Exercise 1:\n",
+    "**Exercise 1:**\n",
+    "\n",
     "Create X_new to finish the prediction. Make sure the scikit-learn API will accept X_new as long as they are of the right shape."
    ]
   },
@@ -366,7 +320,13 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "X_new =  ____\n",
+    "y_new = iris['target'][20:100]\n",
+    "\n",
+    "prediction = knn.predict(X_new)\n",
+    "knn.score(X_new,y_new)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -374,13 +334,15 @@
     "collapsed": true
    },
    "source": [
-    "Measuring model performance\n",
-    "============================"
+    "## Measuring model performance\n",
+    "\n",
+    "In reality, we will not train our model with the entire data set. Rather, we wil split them into \n",
+    "different portions for trainining and validation purposes. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -391,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -402,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -413,29 +375,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "KNeighborsClassifier(algorithm='auto', leaf_size=30, metric='minkowski',\n",
-       "           metric_params=None, n_jobs=1, n_neighbors=8, p=2,\n",
-       "           weights='uniform')"
-      ]
-     },
-     "execution_count": 84,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "knn.fit(X_train, y_train)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -446,39 +395,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Test set predictions:\n",
-      " [2 1 2 2 1 0 1 0 0 1 0 2 0 2 2 0 0 0 1 0 2 2 2 0 1 1 1 0 0 1 2 2 0 0 1 2 2\n",
-      " 1 1 2 1 1 0 2 1]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(\"Test set predictions:\\n {}\".format(y_pred))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.9555555555555556"
-      ]
-     },
-     "execution_count": 87,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
+   "source": [
+    "print(\"Test set actual values: \\n {}\".format(y_test))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Scikit provides embedded testing function"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "knn.score(X_test, y_test)"
    ]
@@ -489,7 +433,7 @@
     "collapsed": true
    },
    "source": [
-    "**Exercise 2:\n",
+    "**Exercise 2:**\n",
     "\n",
     "Data set\n",
     "The MNIST digits recognition dataset has 10 classes, the digits 0 through 9. A reduced version of the MNIST dataset is one of scikit-learn's included datasets, and that is the one we will use in this exercise.\n",
@@ -532,134 +476,46 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {
-    "collapsed": true
-   },
-   "source": [
-    "**Answer of the exercise 2:"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "# Import necessary modules\n",
-    "from sklearn import datasets\n",
-    "import matplotlib.pyplot as plt\n",
-    "\n",
-    "# Load the digits dataset: digits\n",
-    "digits = datasets.load_digits()\n",
-    "\n",
-    "# Print the keys and DESCR of the dataset\n",
-    "print(digits.keys())\n",
-    "print(digits.DESCR)\n",
-    "\n",
-    "# Print the shape of the images and data keys\n",
-    "print(digits.images.shape)\n",
-    "print(digits.data.shape)\n",
-    "\n",
-    "# Display digit 1010\n",
-    "plt.imshow(digits.images[1010], cmap=plt.cm.gray_r, interpolation='nearest')\n",
-    "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 102,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "dict_keys(['data', 'target', 'target_names', 'images', 'DESCR'])\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(digits.keys())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[  0.   0.   7.  15.  13.   1.   0.   0.]\n",
-      " [  0.   8.  13.   6.  15.   4.   0.   0.]\n",
-      " [  0.   2.   1.  13.  13.   0.   0.   0.]\n",
-      " [  0.   0.   2.  15.  11.   1.   0.   0.]\n",
-      " [  0.   0.   0.   1.  12.  12.   1.   0.]\n",
-      " [  0.   0.   0.   0.   1.  10.   8.   0.]\n",
-      " [  0.   0.   8.   4.   5.  14.   9.   0.]\n",
-      " [  0.   0.   7.  13.  13.   9.   0.   0.]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(digits.images[3])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[  0.   0.   7.  15.  13.   1.   0.   0.   0.   8.  13.   6.  15.   4.   0.\n",
-      "   0.   0.   2.   1.  13.  13.   0.   0.   0.   0.   0.   2.  15.  11.   1.\n",
-      "   0.   0.   0.   0.   0.   1.  12.  12.   1.   0.   0.   0.   0.   0.   1.\n",
-      "  10.   8.   0.   0.   0.   8.   4.   5.  14.   9.   0.   0.   0.   7.  13.\n",
-      "  13.   9.   0.   0.]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(digits.data[3])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(1797, 8, 8)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(digits.images.shape)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(1797, 64)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(digits.data.shape)"
    ]
@@ -670,7 +526,7 @@
     "collapsed": true
    },
    "source": [
-    "**Exercise 3:\n",
+    "**Exercise 3:**\n",
     "\n",
     "Train/Test Split + Fit/Predict/Accuracy\n",
     "\n",
@@ -714,65 +570,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {
     "collapsed": true
    },
    "source": [
-    "**Answer of the exercise 3:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 115,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.984444444444\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Import necessary modules\n",
-    "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.neighbors import KNeighborsClassifier\n",
-    "\n",
-    "# Create feature and target arrays\n",
-    "X = digits.data\n",
-    "y = digits.target\n",
-    "\n",
-    "# Split into training and test set\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size = 0.25, random_state=30, stratify=y)\n",
-    "\n",
-    "# Create a k-NN classifier with 7 neighbors: knn\n",
-    "knn = KNeighborsClassifier(n_neighbors=7)\n",
-    "\n",
-    "# Fit the classifier to the training data\n",
-    "knn.fit(X_train,y_train)\n",
-    "\n",
-    "# Print the accuracy\n",
-    "print(knn.score(X_test, y_test))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "collapsed": true
-   },
-   "source": [
-    "**Exercise 4:\n",
+    "** Exercise 4: **\n",
     "\n",
     "By observing how the accuracy scores differ for the training and testing sets with different values of k, you will develop your intuition for overfitting and underfitting.\n",
     "\n",
@@ -795,7 +598,7 @@
    "outputs": [],
    "source": [
     "# Setup arrays to store train and test accuracies\n",
-    "neighbors = np.arange(1, 9)\n",
+    "neighbors = np.arange(1, 30)\n",
     "train_accuracy = np.empty(len(neighbors))\n",
     "test_accuracy = np.empty(len(neighbors))\n",
     "\n",
@@ -822,106 +625,6 @@
     "plt.ylabel('Accuracy')\n",
     "plt.show()"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "collapsed": true
-   },
-   "source": [
-    "**Answer of the exercise 4:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "# Setup arrays to store train and test accuracies\n",
-    "neighbors = np.arange(1, 9)\n",
-    "train_accuracy = np.empty(len(neighbors))\n",
-    "test_accuracy = np.empty(len(neighbors))\n",
-    "\n",
-    "# Loop over different values of k\n",
-    "for i, k in enumerate(neighbors):\n",
-    "    # Setup a k-NN Classifier with k neighbors: knn\n",
-    "    knn = KNeighborsClassifier(n_neighbors=k)\n",
-    "\n",
-    "    # Fit the classifier to the training data\n",
-    "    knn.fit(X_train,y_train)\n",
-    "    \n",
-    "    #Compute accuracy on the training set\n",
-    "    train_accuracy[i] = knn.score(X_train, y_train)\n",
-    "\n",
-    "    #Compute accuracy on the testing set\n",
-    "    test_accuracy[i] = knn.score(X_test, y_test)\n",
-    "\n",
-    "# Generate plot\n",
-    "plt.title('k-NN: Varying Number of Neighbors')\n",
-    "plt.plot(neighbors, test_accuracy, label = 'Testing Accuracy')\n",
-    "plt.plot(neighbors, train_accuracy, label = 'Training Accuracy')\n",
-    "plt.legend()\n",
-    "plt.xlabel('Number of Neighbors')\n",
-    "plt.ylabel('Accuracy')\n",
-    "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
